2007-01-17  Adele Peterson  <adele@apple.com>

        Reviewed by Anders and John.

        Test for http://bugs.webkit.org/show_bug.cgi?id=11278
        <rdar://problem/4826875> REGRESSION: Popup width doesn't change to accommodate dynamic changes to options

        * fast/forms/menulist-width-change-expected.checksum: Added.
        * fast/forms/menulist-width-change-expected.png: Added.
        * fast/forms/menulist-width-change-expected.txt: Added.
        * fast/forms/menulist-width-change.html: Added.

2007-01-16  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=12268
        Give object prototypes their own names

        * fast/dom/Window/window-properties-expected.txt:
        * fast/dom/prototype-chain-expected.txt:
        * fast/events/event-view-toString-expected.txt:
        * fast/events/mouseclick-target-and-positioning-expected.txt:
        * fast/tokenizer/external-script-document-write-expected.checksum:
        * fast/tokenizer/external-script-document-write-expected.png:
        * fast/tokenizer/external-script-document-write-expected.txt:
        Updated the results.

2007-01-17  Eric Seidel  <eric@webkit.org>

        Reviewed by rwlbuis.

        * svg/custom/inner-svg-hit-test-expected.checksum: Added.
        * svg/custom/inner-svg-hit-test-expected.png: Added.
        * svg/custom/inner-svg-hit-test-expected.txt: Added.
        * svg/custom/inner-svg-hit-test.svg: Added.

2007-01-17  Eric Seidel  <eric@webkit.org>

        Reviewed by mitz and rwlbuis.
        
        SVGs don't work as background images.
        http://bugs.webkit.org/show_bug.cgi?id=12096

        * fast/images/svg-as-background-expected.checksum:
        * fast/images/svg-as-background-expected.png:
        * fast/images/svg-as-tiled-background-expected.checksum:
        * fast/images/svg-as-tiled-background-expected.png:

2007-01-16  Justin Garcia  <justin.garcia@apple.com>
