@@ -1,5 +1,16 @@
 2007-01-17  Adele Peterson  <adele@apple.com>
 
+        Reviewed by Beth.
+
+        Fix for  http://bugs.webkit.org/show_bug.cgi?id=10139
+        <rdar://problem/4823028> REGRESSION: Reproducible crash when selecting a popup/button with ::selection pseudostyle
+
+        Test: fast/css/pseudostyle-anonymous-text.html
+
+        * rendering/RenderObject.cpp: (WebCore::RenderObject::getPseudoStyle): Nil check the node.
+
+2007-01-17  Adele Peterson  <adele@apple.com>
+
         Reviewed by Anders and John.
 
         Fix for http://bugs.webkit.org/show_bug.cgi?id=11278
